<resources xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Greek Reference</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_heading_lexicon">Lexicon</string>
    <string name="nav_drawer_row_browse_lexicon">Browse</string>
    <string name="nav_drawer_row_favorites">Favorites</string>
    <string name="nav_drawer_row_history">History</string>
    <string name="nav_drawer_heading_grammar">Syntax</string>
    <string name="nav_drawer_row_browse_grammar">Browse</string>
    <string name="nav_drawer_row_bookmarks">Bookmarks</string>
    <string name="search_hint">Search lexicon</string>
    <string name="search_description">Lexicon entries</string>
    <string name="search">Search</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_feedback">Send feedback</string>
    <string name="title_lexicon">Lexicon</string>
    <string name="title_syntax">Syntax</string>
    <string name="title_lexicon_browse">Browse</string>
    <string name="title_lexicon_favorites">Favorites</string>
    <string name="title_lexicon_history">History</string>
    <string name="title_syntax_browse">Browse</string>
    <string name="title_syntax_bookmarks">Bookmarks</string>
    <string name="toast_clear_history">History cleared.</string>
    <string name="action_add_favorite">Add to favorites</string>
    <string name="action_remove_favorite">Remove from favorites</string>
    <string name="toast_search_no_results">No results.</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_remove_bookmark">Remove bookmark</string>
    <string name="action_help">Help</string>
    <string name="action_clear_favorites">Clear favorites</string>
    <string name="action_clear_bookmarks">Clear bookmarks</string>
    <string name="feedback_email">greekreference@benlinskey.com</string>
    <string name="feedback_subject">Greek Reference feedback</string>
    <string name="feedback_intent_chooser">Send feedback via</string>
    <string name="toast_clear_lexicon_favorites">Favorites cleared.</string>
    <string name="clear_lexicon_favorites_dialog_message">        Are you sure you want to permanently clear your favorites list?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_syntax_bookmarks_dialog_message">        Are you sure you want to permanently clear your bookmarks list?</string>
    <string name="toast_clear_syntax_bookmarks">Bookmarks cleared.</string>
    <string name="toast_favorite_added">Favorite added.</string>
    <string name="toast_favorite_removed">Favorite removed.</string>
    <string name="toast_bookmark_added">Bookmark added.</string>
    <string name="toast_bookmark_removed">Bookmark removed.</string>
    <string name="lexicon_favorites_empty_view">
        Tap the Add to Favorites icon to save your favorite words to this list.
    </string>
    <string name="lexicon_history_empty_view">Your history is empty.</string>
    <string name="syntax_bookmarks_empty_view">
        Tap the Bookmark icon to save your favorite sections to this list.
    </string>
    <string name="title_help">Help</string>
    <string name="message_help">
<![CDATA[
        <p>
            To search the lexicon, tap the magnifying glass icon. You can use either Greek characters or
            <a href="http://en.wikipedia.org/wiki/Beta_code#Encoding">Beta code</a> to search.
            Diacritics are optional in both cases. For example, you can search for λόγος by typing
            \"logos.\" Search queries are not case sensitive.
        </p>
        <p>
            To switch between modes, open the navigation drawer by swiping in from the left edge of
            the screen or tapping the application icon in the upper-left corner.
        </p>
        <p>
            To submit a bug report, select the Send Feedback option from the menu.
        </p>
        ]]>
    </string>
    <string name="title_about">About</string>
    <string name="title_licenses">Licenses</string>
    <string name="message_about">
<![CDATA[
        <p>
            This app\'s source code is available under an open source license at
            <a href="https://github.com/blinskey/greek-reference">https://github.com/blinskey/greek-reference</a>.
        </p>
        <p>
            Thanks to the <a href="http://www.perseus.tufts.edu">Perseus Digital Library</a> and
            Jeffrey A. Rydberg-Cox for making available the texts used in this app. Visit
            Dr. Rydberg-Cox\'s web site at <a href="http://daedalus.umkc.edu">http://daedalus.umkc.edu</a>.
        </p>
        <p>
            This app includes the text of <i>An Intermediate Greek-English Lexicon</i>, by Henry
            George Liddell and Robert Scott. Text provided by Perseus Digital Library, with funding
            from The Annenberg CPB/Project. Original version available for viewing and download at
            <a href="http://www.perseus.tufts.edu/hopper/">http://www.perseus.tufts.edu/hopper/</a>.
            The text is licensed under the Creative Commons Attribution-ShareAlike 3.0
	    United States License (https://creativecommons.org/licenses/by-sa/3.0/us/),
            with the additional restriction that you offer Perseus any modifications you make. 
            The copy of the text in this app includes a number of typographical corrections.
        </p>
        <p>
            The app also includes the text of <i>Overview of Greek Syntax</i>, by Jeffrey A.
            Rydberg-Cox. Text provided by Perseus Digital Library, with funding from The Annenberg
            CPB/Project. Original version available for viewing and download at
            <a href="http://www.perseus.tufts.edu/hopper/">http://www.perseus.tufts.edu/hopper/</a>.
            The text is licensed under the Creative Commons Attribution-ShareAlike 3.0
	        United States License (https://creativecommons.org/licenses/by-sa/3.0/us/),
            with the additional restriction that you offer Perseus any modifications you make. 
        </p>
        <p>
          The icons used in this app are taken from the <a href="https://github.com/google/material-design-icons">
          Google Material Design Icons</a> set, licensed under the <a href="http://creativecommons.org/licenses/by-sa/4.0/">
          Creative Common Attribution 4.0 International license</a>.
        </p>
        <hr>
        <p>
            The following additional open source resources were used in the development of this app.
            Thanks to their creators for making their work available.
            <ul>
                <li><a href="https://github.com/jgilfelt/android-sqlite-asset-helper">SQLiteAssetHelper</a></li>
                <br>
                <li><a href="http://sourceforge.net/projects/epidoc/files/Transcoder/">EpiDoc TransCoder</a></li>
                <br>
                <li><a href="https://code.google.com/p/noto/">Noto Serif font</a></li>
                <br>
                <li><a href="http://www.tristanwaddington.com/2012/09/android-textview-with-custom-font-support/">TypefaceTextView</a></li>
            </ul>
        </p>
        ]]>
    </string>
    <string name="message_licenses">
        <![CDATA[
        <p>
        This app includes the contents of the text \"An Intermediate Greek-English Lexicon,\"
        by Henry George Liddell and Robert Scott. Text provided by Perseus Digital Library,
        with funding from The Annenberg CPB/Project. Original version available for viewing
        and download at http://www.perseus.tufts.edu/hopper/. The text is licensed under
        the Creative Commons Attribution-ShareAlike 3.0 United States License
        (https://creativecommons.org/licenses/by-sa/3.0/us/), with the additional restriction that
        you offer Perseus any modifications you make.
        </p>
        <p>
        The text also includes the following terms:
        </p>
        <p>
        This text may be freely distributed, subject to the following restrictions:
        </p>
        <ul>
            <li>
            <p>You credit Perseus, as follows, whenever you use the document:</p>
            <p>"Text provided by Perseus Digital Library, with funding from The Annenberg
            CPB/Project. Original version available for viewing and download at
            http://www.perseus.tufts.edu/hopper/."</p>
            </li>
            <li>You leave this availability statement intact.</li>
            <li>You use it for non-commercial purposes only.</li>
            <li>You offer Perseus any modifications you make.</li>
        </ul>
        <hr>
        <p>
        This app includes the contents of the text \"Overview of Greek Syntax,\"
        by Jeffrey A. Rydberg-Cox. Text provided by Perseus Digital Library,
        with funding from The Annenberg CPB/Project. Original version available for viewing
        and download at http://www.perseus.tufts.edu/hopper/. The text is licensed under
        the Creative Commons Attribution-ShareAlike 3.0 United States License
        (https://creativecommons.org/licenses/by-sa/3.0/us/), with the additional restriction that
        you offer Perseus any modifications you make.
        </p>
        <p>
        The text also includes the following terms:
        </p>
        <p>
        This text may be freely distributed, subject to the following restrictions:
        </p>
        <ul>
            <li>
            <p>You credit Perseus, as follows, whenever you use the document:</p>
            <p>"Text provided by Perseus Digital Library, with funding from The Annenberg
            CPB/Project. Original version available for viewing and download at
            http://www.perseus.tufts.edu/hopper/."</p>
            </li>
            <li>You leave this availability statement intact.</li>
            <li>You use it for non-commercial purposes only.</li>
            <li>You offer Perseus any modifications you make.</li>
        </ul>
        <hr>
        <p>
          The icons used in this app are taken from the <a href="https://github.com/google/material-design-icons">
          Google Material Design Icons</a> set, licensed under the <a href="http://creativecommons.org/licenses/by-sa/4.0/">
          Creative Common Attribution 4.0 International license</a>.
        </p>
        <hr>
        <p>
            The following resources distributed under the Apache License, Version 2.0, are used
            in this app: the androidx appcompat, core, and drawerlayout libraries, the Material
            Components for Android library, the SQLiteAssetHelper library, source code from the
            Android Open Source Project (used in the files simple_list_item_activated_1.xml and
            abc_search_dropdown_item_icons_2line.xml), source code from Simple Finance Corporation
            (used in the file GreekTextView.java), and the Noto Serif font. The text of the license
            is below.
        </p>
        ]]>
    </string>
    <string name="pref_textSize">Font size</string>
    <string name="pref_textSize_item_medium">Medium</string>
    <string name="settings">Settings</string>
    <string name="pref_textSize_key">PREF_TEXT_SIZE_KEY</string>
    <string name="pref_about_key">PREF_ABOUT_KEY</string>
    <string name="pref_licenses_key">PREF_LICENSES_KEY</string>
    <string name="pref_perseus_tool_key">PREF_PERSEUS_TOOL_KEY</string>
    <string name="pref_perseus_tool">Hide \"View on Perseus\" option</string>
</resources>