<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Benjamin Linskey
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_add_favorite"
          android:icon="@drawable/ic_star_light"
          android:title="@string/action_add_favorite"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_remove_favorite"
          android:icon="@drawable/ic_star_color"
          android:title="@string/action_remove_favorite"
          android:showAsAction="always"/>
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:showAsAction="never"/>
    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        android:showAsAction="never"/>
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:showAsAction="never"/>
</menu>