<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Benjamin Linskey
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Favorite/unfavorite icons are placeholders. -->
    <item android:id="@+id/action_add_favorite"
          android:icon="@drawable/ic_action_star_0"
          android:title="@string/action_add_favorite"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_remove_favorite"
          android:icon="@drawable/ic_action_star_10"
          android:title="@string/action_remove_favorite"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />"
    <item android:id="@+id/action_clear_history"
          android:title="@string/action_clear_history"
          android:showAsAction="never"/>
    <item android:id="@+id/action_feedback"
          android:title="@string/action_feedback"
          android:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:showAsAction="never"/>
</menu>